[tool.black]
line-length = 100
target-version = ["py311", "py312"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_eval"
version = "0.1.0"
authors = [{ name = "Simple Eval Team", email = "contact@simple-eval.com" }]
description = "A simple evaluation framework for machine learning models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# 從 requirements.txt 同步的實際依賴
dependencies = [
    "datasets==3.5.0",
    "pandas==2.2.3",
    "python-dotenv==1.1.0",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "vllm==0.8.4",
    "sentence-transformers==2.0.0",
]

keywords = ["machine learning", "evaluation", "nlp", "transformers", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# CLI 入口
[project.scripts]
simple-eval = "simple_eval.main:main"

# 專案連結
[project.urls]
Source = "https://github.com/simple-eval/simple_eval"
Bug-Tracker = "https://github.com/simple-eval/simple_eval/issues"

# ---- setuptools 專用設定 ----
[tool.setuptools]
include-package-data = true

# 自動發現所有套件，類似於 setup.py 中的 find_packages()
[tool.setuptools.packages.find]
# 從這些目錄開始尋找套件
where = ["."]
# 包含這些套件名稱模式
include = ["simple_eval*"]
# 排除這些套件（如果需要的話）
# exclude = ["tests*"]
